styles/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}         

/* Setting up custom properties */
:root {
    /* Custom font family & font weight */
    --ff-primary: 'Source Sans Pro', sans-serif;
    --ff-secondary: 'Source Code Pro', monospace;
    --fw-reg: 300;
    --fw-bold: 900;

    --clr-light: #fff;
    --clr-dark: #303030;
    --clr-accent: #f08080;

    /* Font sizes */
    --fs-h1: 3rem;
    --fs-h2: 2.25rem;
    --fs-h3: 1.5rem;
    --fs-body: 1rem;
}

/* Enlarge font size on bigger screens */
@media (min-width: 800px) {
    :root {
        --fs-h1: 4.5rem;
        --fs-h2: 3.75rem;
        --fs-h3: 1.75rem;
        --fs-body: 1.125rem;
    }
    
}

/* Shrink elements on small screens*/
@media (max-width:600px) {
    .logo {
        width: 250px;
    }
}


/* General styles */
body {
    background: var(--clr-light);
    color: var(--clr-dark);
    margin: 0;
    font-family: var(--ff-primary);
    font-size: var(--fs-body);
    line-height: 1.6;

}

section {
    padding: 3em 1.5em;
}

img {
    display: block;
    max-width: 100%;
}

strong { font-weight: var(--fw-bold) }



/* Typography */
h1,
h2,
h3 {
    line-height: 1em;
    margin: 0;
}

h1 { font-size: var(--fs-h1) }
h2 { font-size: var(--fs-h2) }
h3 { font-size: var(--fs-h3) }


.section__title {
    font-size: var(--fs-h1);
    margin-bottom: 0.1em;
}

.section__title--intro {
    font-weight: var(--fw-reg);
}

.section__title--intro strong{
    display: block;
}

.section__subtitle {
    margin: 0;
    font-size: var(--fs-h3);    
}

.section__subtitle--intro,
.section__subtitle--about,
.section__subtitle--projects,
.section__subtitle--contact {
    background: var(--clr-accent);
    font-family: var(--ff-secondary);
    font-weight: var(--fw-reg);
    margin-bottom: 1em;
}


/* Header */
header {
    width: 100%;
    background-color: var(--clr-dark);
    text-align: right;
    position: fixed;
    z-index: 999;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

.logo {
    z-index:1;
    grid-column: 3 / 3;
}


/* Navigation bar - work in progess*/
.nav {
    background-color: var(--clr-dark);
    width: 100%;
    position: absolute;
    text-align: left;
    top: 0;
    left: 0;
    display: none;
    border: 1px solid red
}

.nav__list {
    margin: 0;
    padding: 0;
    list-style: none;
}

.nav__item {
    margin-bottom: 1em;
    margin-left: 1em;
}

.nav__link { 
    text-decoration: none;
    color: var(--clr-light);
    font-size: 1.2rem;
    text-transform: uppercase;
} 


.nav__link:hover {
    background-color: black;
}

.nav-toggle {
    display: none;
}

.nav-toggle:checked ~ nav {
    display:block;
}

.nav-toggle-label {
    position: absolute;
    top: 0;
    left: 0;
    margin-left: 1em;
    height: 100%;
    display: flex;
    align-items: center;
    color: var(--clr-light);
    transform: rotate(-90deg);
    font-size: 1.5em;
}


/* Intro section */

.intro {
    position: relative;
}

.intro__image {
    max-width: 50%;
}

/* About me section */
.about-me {
    max-width: 1000px;
    margin: 0 auto;

}

@media (min-width: 800px) {
    .about-me__body {
        display: flex;
        gap: 2em;
    }
    
    .about-me__body--image {
        max-width: 70%;
        height: auto;
    }
}


/* Projects section - Temporary: Work in progress. Create responsive where images enlarge with size.*/
.projects__list {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    list-style: none;
}

.project__item {
    background: var(--clr-accent);
    padding: 3em;
    width: 10em;
    height: 8em;
    margin-top: 0.2em;
    margin-bottom: 0.5em;

    font-size: 2.5em;
    text-align: center;
}

.project__link {
    text-decoration: none;
    color: var(--clr-light);
}


/* Contact section */

